--- a/index.html
+++ b/index.html
@@ -241,13 +241,7 @@
             </a></li>
           <div class="line"></div>
           <li><a href="#">
-              <p>Home & Kitchen</p><svg width="6" height="10" viewBox="0 0 6 10" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M1.46875 9.79688L5.46875 5.79688C5.60417 5.67188 5.67188 5.52083 5.67188 5.34375C5.67188 5.15625 5.60417 4.99479 5.46875 4.85938L1.46875 0.859375C1.34375 0.734375 1.1875 0.671875 1 0.671875C0.8125 0.671875 0.65625 0.734375 0.53125 0.859375C0.395833 0.994792 0.328125 1.15625 0.328125 1.34375C0.328125 1.52083 0.395833 1.67188 0.53125 1.79688L4.0625 5.32812L0.53125 8.85938C0.395833 8.99479 0.328125 9.15625 0.328125 9.34375C0.328125 9.52083 0.395833 9.67188 0.53125 9.79688C0.65625 9.93229 0.8125 10 1 10C1.1875 10 1.34375 9.93229 1.46875 9.79688Z"
-                  fill="#8D979E" />
-              </svg>
-
+              <p>Home & Kitchen</p>
             </a></li>
           <div class="line"></div>
           <li><a href="#">
@@ -261,13 +255,7 @@
             </a></li>
           <div class="line"></div>
           <li><a href="#">
-              <p>Health & Beauty</p><svg width="6" height="10" viewBox="0 0 6 10" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M1.46875 9.79688L5.46875 5.79688C5.60417 5.67188 5.67188 5.52083 5.67188 5.34375C5.67188 5.15625 5.60417 4.99479 5.46875 4.85938L1.46875 0.859375C1.34375 0.734375 1.1875 0.671875 1 0.671875C0.8125 0.671875 0.65625 0.734375 0.53125 0.859375C0.395833 0.994792 0.328125 1.15625 0.328125 1.34375C0.328125 1.52083 0.395833 1.67188 0.53125 1.79688L4.0625 5.32812L0.53125 8.85938C0.395833 8.99479 0.328125 9.15625 0.328125 9.34375C0.328125 9.52083 0.395833 9.67188 0.53125 9.79688C0.65625 9.93229 0.8125 10 1 10C1.1875 10 1.34375 9.93229 1.46875 9.79688Z"
-                  fill="#8D979E" />
-              </svg>
-
+              <p>Health & Beauty</p>
             </a></li>
           <div class="line"></div>
           <li><a href="#">
@@ -296,27 +284,44 @@
       <div class="banner">
         <div class="banner__img">
           <img src="./img/bg.png" alt="">
-        </div>
-        <div class="banner__text">
-          <h3 class="banner__text--subtitle">Gamepad console</h3>
-          <h2 class="banner__text--title">Today’s Offer <br>
-            Skin <span>Gamepad</span> 2022</h2>
-          <button class="banner__button">shop now</button>
-        </div>
-        <div class="arrow arrow__left">
-          <svg width="6" height="11" viewBox="0 0 6 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M5.77734 9.4668L1.80469 5.49414L5.77734 1.52148C5.92969 1.38086 6.00586 1.21094 6.00586 1.01172C6.00586 0.800781 5.92969 0.619141 5.77734 0.466797C5.63672 0.326172 5.46094 0.255859 5.25 0.255859C5.03906 0.255859 4.86328 0.326172 4.72266 0.466797L0.222656 4.9668C0.0703125 5.11914 -0.00585938 5.30078 -0.00585938 5.51172C-0.00585938 5.71094 0.0703125 5.88086 0.222656 6.02148L4.72266 10.5215C4.86328 10.6738 5.03906 10.75 5.25 10.75C5.46094 10.75 5.63672 10.6738 5.77734 10.5215C5.92969 10.3809 6.00586 10.2109 6.00586 10.0117C6.00586 9.80078 5.92969 9.61914 5.77734 9.4668Z"
-              fill="white" />
-          </svg>
-        </div>
-        <div class="arrow arrow__right">
-          <svg width="6" height="11" viewBox="0 0 6 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M1.27734 10.5215L5.77734 6.02148C5.92969 5.88086 6.00586 5.71094 6.00586 5.51172C6.00586 5.30078 5.92969 5.11914 5.77734 4.9668L1.27734 0.466797C1.13672 0.326172 0.960938 0.255859 0.75 0.255859C0.539062 0.255859 0.363281 0.326172 0.222656 0.466797C0.0703125 0.619141 -0.00585938 0.800781 -0.00585938 1.01172C-0.00585938 1.21094 0.0703125 1.38086 0.222656 1.52148L4.19531 5.49414L0.222656 9.4668C0.0703125 9.61914 -0.00585938 9.80078 -0.00585938 10.0117C-0.00585938 10.2109 0.0703125 10.3809 0.222656 10.5215C0.363281 10.6738 0.539062 10.75 0.75 10.75C0.960938 10.75 1.13672 10.6738 1.27734 10.5215Z"
-              fill="white" />
-          </svg>
+          <div class="banner__text">
+            <h3 class="banner__text--subtitle">Gamepad console</h3>
+            <h2 class="banner__text--title">Today’s Offer <br>
+              Skin <span>Gamepad</span> 2022</h2>
+            <button class="banner__button">shop now</button>
+          </div>
+          <div class="arrow arrow__left">
+            <svg width="6" height="11" viewBox="0 0 6 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M5.77734 9.4668L1.80469 5.49414L5.77734 1.52148C5.92969 1.38086 6.00586 1.21094 6.00586 1.01172C6.00586 0.800781 5.92969 0.619141 5.77734 0.466797C5.63672 0.326172 5.46094 0.255859 5.25 0.255859C5.03906 0.255859 4.86328 0.326172 4.72266 0.466797L0.222656 4.9668C0.0703125 5.11914 -0.00585938 5.30078 -0.00585938 5.51172C-0.00585938 5.71094 0.0703125 5.88086 0.222656 6.02148L4.72266 10.5215C4.86328 10.6738 5.03906 10.75 5.25 10.75C5.46094 10.75 5.63672 10.6738 5.77734 10.5215C5.92969 10.3809 6.00586 10.2109 6.00586 10.0117C6.00586 9.80078 5.92969 9.61914 5.77734 9.4668Z"
+                fill="white" />
+            </svg>
+          </div>
+          <div class="arrow arrow__right">
+            <svg width="6" height="11" viewBox="0 0 6 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1.27734 10.5215L5.77734 6.02148C5.92969 5.88086 6.00586 5.71094 6.00586 5.51172C6.00586 5.30078 5.92969 5.11914 5.77734 4.9668L1.27734 0.466797C1.13672 0.326172 0.960938 0.255859 0.75 0.255859C0.539062 0.255859 0.363281 0.326172 0.222656 0.466797C0.0703125 0.619141 -0.00585938 0.800781 -0.00585938 1.01172C-0.00585938 1.21094 0.0703125 1.38086 0.222656 1.52148L4.19531 5.49414L0.222656 9.4668C0.0703125 9.61914 -0.00585938 9.80078 -0.00585938 10.0117C-0.00585938 10.2109 0.0703125 10.3809 0.222656 10.5215C0.363281 10.6738 0.539062 10.75 0.75 10.75C0.960938 10.75 1.13672 10.6738 1.27734 10.5215Z"
+                fill="white" />
+            </svg>
 
+          </div>
+          <div class="banner__dot">
+            <svg width="6" height="6" viewBox="0 0 6 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="3" cy="3" r="3" fill="white" fill-opacity="0.2" />
+            </svg>
+            <svg width="6" height="6" viewBox="0 0 6 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="3" cy="3" r="3" fill="white" fill-opacity="0.2" />
+            </svg>
+            <svg width="6" height="6" viewBox="0 0 6 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="3" cy="3" r="3" fill="white" />
+            </svg>
+            <svg width="6" height="6" viewBox="0 0 6 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="3" cy="3" r="3" fill="white" fill-opacity="0.2" />
+            </svg>
+            <svg width="6" height="6" viewBox="0 0 6 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="3" cy="3" r="3" fill="white" fill-opacity="0.2" />
+            </svg>
+          </div>
         </div>
         <div class="banner__bottom">
           <div class="banner__bottom--item">
@@ -356,7 +361,7 @@
       <div class="product__left">
         <div class="product__item">
           <div class="product__img">
-            <img src="./img/img (1).png" alt="">
+            <img src="./img/img(1).png" alt="">
           </div>
           <div class="product__title">
             Apple iPhone 12 Pro Max<br>128GB - Unlocked
@@ -471,7 +476,7 @@
         </div>
         <div class="product__item">
           <div class="product__img">
-            <img src="./img/bg(3).png" alt="">
+            <img src="./img/img(3).png" alt="">
           </div>
           <div class="product__title">
             Apple Watch Aluminum Case <br> Pride Edition
@@ -514,7 +519,26 @@
         <div class="line"></div>
         <div class="product__content">
           <div class="product__center--img">
-            <img src="./img/img (2).png" alt="">
+            <img src="./img/img(2).png" alt="">
+            <div class="product__outstanding product__outstanding--center">
+              -20%
+            </div>
+            <div class="product__outstanding--rigth">
+              <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="16" cy="16" r="15.5" fill="white" stroke="#E5E8EC" />
+                <path d="M10 13H16V22H12C10.8954 22 10 21.1046 10 20V13Z" fill="#16BCDC" fill-opacity="0.3" />
+                <path
+                  d="M16.5469 18.0781C16.5469 17.7761 16.302 17.5312 16 17.5312C15.698 17.5312 15.4531 17.7761 15.4531 18.0781V20.2656C15.4531 20.5677 15.698 20.8125 16 20.8125C16.302 20.8125 16.5469 20.5677 16.5469 20.2656V18.0781Z"
+                  fill="#1AB4D1" />
+                <path
+                  d="M10.5312 17.5312C10.2292 17.5312 9.98438 17.7761 9.98438 18.0781V20.2656C9.98438 21.7734 11.211 23 12.7188 23H19.2812C20.789 23 22.0156 21.7734 22.0156 20.2656V18.0781C22.0156 17.7761 21.7708 17.5312 21.4688 17.5312C21.1667 17.5312 20.9219 17.7761 20.9219 18.0781V20.2656C20.9219 21.1703 20.1859 21.9062 19.2812 21.9062H12.7188C11.8141 21.9062 11.0781 21.1703 11.0781 20.2656V18.0781C11.0781 17.7761 10.8333 17.5312 10.5312 17.5312Z"
+                  fill="#1AB4D1" />
+                <path
+                  d="M10.6406 16.6562H21.3594C22.264 16.6562 23 15.9203 23 15.0156V13.9219C23 13.0172 22.264 12.2812 21.3594 12.2812H19.5338C19.7206 11.9592 19.8281 11.5858 19.8281 11.1875C19.8281 9.98131 18.8468 9 17.6406 9C16.9877 9 16.4012 9.28787 16 9.7429C15.5988 9.28787 15.0123 9 14.3594 9C13.1532 9 12.1719 9.98131 12.1719 11.1875C12.1719 11.5858 12.2794 11.9592 12.4662 12.2812H10.6406C9.73598 12.2812 9 13.0172 9 13.9219V15.0156C9 15.9203 9.73598 16.6562 10.6406 16.6562ZM17.6406 10.0938C18.2437 10.0938 18.7344 10.5844 18.7344 11.1875C18.7344 11.7906 18.2437 12.2812 17.6406 12.2812H16.5469V11.1875C16.5469 10.5844 17.0375 10.0938 17.6406 10.0938ZM13.2656 11.1875C13.2656 10.5844 13.7563 10.0938 14.3594 10.0938C14.9625 10.0938 15.4531 10.5844 15.4531 11.1875V12.2812H14.3594C13.7563 12.2812 13.2656 11.7906 13.2656 11.1875ZM10.0938 13.9219C10.0938 13.6203 10.3391 13.375 10.6406 13.375H15.4531V13.9219C15.4531 14.2239 15.698 14.4688 16 14.4688C16.302 14.4688 16.5469 14.2239 16.5469 13.9219V13.375H21.3594C21.6609 13.375 21.9062 13.6203 21.9062 13.9219V15.0156C21.9062 15.3172 21.6609 15.5625 21.3594 15.5625H10.6406C10.3391 15.5625 10.0938 15.3172 10.0938 15.0156V13.9219Z"
+                  fill="#1AB4D1" />
+              </svg>
+
+            </div>
           </div>
           <div class="product__center--title">
             Apple iPhone 13 Pro Max 128GB Gold Fully Unlocked
@@ -762,8 +786,6 @@
               <li><a href="#">Store Location
                 </a></li>
               <li><a href="#">Orders Tracking</a></li>
-              <li><a href="#">Delivery Information
-                </a></li>
               <li><a href="#">FAQs
                 </a></li>
             </ul>
