fix: convert image png to webp

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               </svg>
 
             </a></li>
-          <div class="line"></div>
+          <!-- <div class="line"></div> -->
           <li><a href="#">
               <p>Laptop & Ipad</p><svg width="6" height="10" viewBox="0 0 6 10" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -219,7 +219,7 @@
               </svg>
 
             </a></li>
-          <div class="line"></div>
+          <!-- <div class="line"></div> -->
           <li><a href="#">
               <p>Cameras & Photos</p><svg width="6" height="10" viewBox="0 0 6 10" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -229,7 +229,7 @@
               </svg>
 
             </a></li>
-          <div class="line"></div>
+          <!-- <div class="line"></div> -->
           <li><a href="#">
               <p>Smart Phones & Tablets</p><svg width="6" height="10" viewBox="0 0 6 10" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -239,11 +239,11 @@
               </svg>
 
             </a></li>
-          <div class="line"></div>
+          <!-- <div class="line"></div> -->
           <li><a href="#">
               <p>Home & Kitchen</p>
             </a></li>
-          <div class="line"></div>
+          <!-- <div class="line"></div> -->
           <li><a href="#">
               <p>TV & Audios</p><svg width="6" height="10" viewBox="0 0 6 10" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -253,11 +253,11 @@
               </svg>
 
             </a></li>
-          <div class="line"></div>
+          <!-- <div class="line"></div> -->
           <li><a href="#">
               <p>Health & Beauty</p>
             </a></li>
-          <div class="line"></div>
+          <!-- <div class="line"></div> -->
           <li><a href="#">
               <p>Watches & Eyewear</p><svg width="6" height="10" viewBox="0 0 6 10" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -267,15 +267,15 @@
               </svg>
 
             </a></li>
-          <div class="line"></div>
+          <!-- <div class="line"></div> -->
           <li><a href="#">
               <p class="menu__text">Top Deals</p>
             </a></li>
-          <div class="line"></div>
+          <!-- <div class="line"></div> -->
           <li><a href="#">
               <p class="menu__text">Top Selling Products</p>
             </a></li>
-          <div class="line"></div>
+          <!-- <div class="line"></div> -->
           <li><a href="#">
               <p class="menu__text">Top Featured Products</p>
             </a></li>
@@ -283,7 +283,7 @@
       </div>
       <div class="banner">
         <div class="banner__img">
-          <img src="./img/bg.png" alt="">
+          <img src="./img/bg.webp" alt="">
           <div class="banner__text">
             <h3 class="banner__text--subtitle">Gamepad console</h3>
             <h2 class="banner__text--title">Today’s Offer <br>
@@ -325,7 +325,7 @@
         </div>
         <div class="banner__bottom">
           <div class="banner__bottom--item">
-            <img src="./img/bg(1).png" alt="">
+            <img src="./img/bg(1).webp" alt="">
             <div class="banner__bottom--text">
               <h3 class="banner__bottom--title">Trending <br>
                 New Phone Pro</h3>
@@ -335,7 +335,7 @@
             </div>
           </div>
           <div class="banner__bottom--item">
-            <img src="./img/img.png" alt="">
+            <img src="./img/img.webp" alt="">
             <div class="banner__bottom--text">
               <h3 class="banner__bottom--title">Top Product <br>
                 MateBook Pro 2022</h3>
@@ -345,7 +345,7 @@
             </div>
           </div>
           <div class="banner__bottom--item">
-            <img src="./img/bg(2).png" alt="">
+            <img src="./img/bg(2).webp" alt="">
             <div class="banner__bottom--text">
               <h3 class="banner__bottom--title">iPad Pro <br>
                 Up To 20% Off</h3>
@@ -361,7 +361,7 @@
       <div class="product__left">
         <div class="product__item">
           <div class="product__img">
-            <img src="./img/img(1).png" alt="">
+            <img src="./img/img_1_.webp" alt="">
           </div>
           <div class="product__title">
             Apple iPhone 12 Pro Max<br>128GB - Unlocked
@@ -403,7 +403,7 @@
         </div>
         <div class="product__item">
           <div class="product__img">
-            <img src="./img/bg(3).png" alt="">
+            <img src="./img/bg(3).webp" alt="">
           </div>
           <div class="product__title">
             Apple Watch Aluminum Case <br> Pride Edition
@@ -437,7 +437,7 @@
         </div>
         <div class="product__item">
           <div class="product__img">
-            <img src="./img/bg(4).png" alt="">
+            <img src="./img/bg_4_.webp" alt="">
           </div>
           <div class="product__title">
             Apple iPhone 12 Pro Max<br>128GB - Unlocked
@@ -476,7 +476,7 @@
         </div>
         <div class="product__item">
           <div class="product__img">
-            <img src="./img/img(3).png" alt="">
+            <img src="./img/img_3_.webp" alt="">
           </div>
           <div class="product__title">
             Apple Watch Aluminum Case <br> Pride Edition
@@ -519,7 +519,7 @@
         <div class="line"></div>
         <div class="product__content">
           <div class="product__center--img">
-            <img src="./img/img(2).png" alt="">
+            <img src="./img/img_2_.webp" alt="">
             <div class="product__outstanding product__outstanding--center">
               -20%
             </div>
@@ -592,7 +592,7 @@
       <div class="product__left">
         <div class="product__item">
           <div class="product__img">
-            <img src="./img/bg(5).png" alt="">
+            <img src="./img/bg_5_.webp" alt="">
           </div>
           <div class="product__title">
             Apple iPhone 12 Pro Max<br>128GB - Unlocked
@@ -628,7 +628,7 @@
         </div>
         <div class="product__item">
           <div class="product__img">
-            <img src="./img/bg(6).png" alt="">
+            <img src="./img/bg_6_.webp" alt="">
           </div>
           <div class="product__title">
             Apple Watch Aluminum Case <br> Pride Edition
@@ -668,7 +668,7 @@
         </div>
         <div class="product__item">
           <div class="product__img">
-            <img src="./img/bg(7).png" alt="">
+            <img src="./img/bg_7_.webp" alt="">
           </div>
           <div class="product__title">
             Apple iPhone 12 Pro Max<br>128GB - Unlocked
@@ -710,7 +710,7 @@
         </div>
         <div class="product__item">
           <div class="product__img">
-            <img src="./img/bg(8).png" alt="">
+            <img src="./img/bg_8_.webp" alt="">
           </div>
           <div class="product__title">
             Apple Watch Aluminum Case <br> Pride Edition
@@ -819,13 +819,13 @@
           Payment Method:
         </div>
         <div class="footer__license--img">
-          <img src="./img/1.png" alt="">
-          <img src="./img/2.png" alt="">
-          <img src="./img/3.png" alt="">
-          <img src="./img/4.png" alt="">
-          <img src="./img/5.png" alt="">
-          <img src="./img/6.png" alt="">
-          <img src="./img/7.png" alt="">
+          <img src="./img/1.webp" alt="">
+          <img src="./img/2.webp" alt="">
+          <img src="./img/3.webp" alt="">
+          <img src="./img/4.webp" alt="">
+          <img src="./img/5.webp" alt="">
+          <img src="./img/6.webp" alt="">
+          <img src="./img/7.webp" alt="">
         </div>
       </div>
     </div>
